--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -7,7 +7,7 @@
 				<h3>Oct 17-18th, 2016</h3>
 				<h3>Sheraton Centre</h3>
 				<h3>Toronto, Canada</h3>
-			</div>	
+			</div>
 		</div>
 		<div id="information-bar">
 			<div class="container">
@@ -18,8 +18,9 @@
 							<li>Two days filled with networking and sessions</li>
 							<li>Mobile app for planning your schedule, meeting exhibitors, sponsors, and attendees!</li>
 							<li>Video recordings of all sessions!</li>
-							<li>Cocktail Reception</li>
-							<li>Snacks and lots of coffee!</li>
+							<li>Cocktail Reception with 1 free drink, and appetizers!</li>
+							<li>Lunch on both days!</li>
+							<li>Lots of coffee, tea and water!</li>
 							<li>Access to the Exhibit hall with lots of swag!</li>
 						</ul>
 					</div>
@@ -28,8 +29,8 @@
 							<span>Register Today!</span></a>
 						<p class="greytext small">Pricing includes all taxes and services fees. Tickets do not need to be assigned to an attendee right away. You may assign your tickets to your company name to create a flex pass.</p>
 					</div>
-				</div>	
+				</div>
 			</div>
-		</div>	
-	</div>	
+		</div>
+	</div>
 </header>
