--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -12,19 +12,23 @@
 		<div id="information-bar">
 			<div class="container">
 				<div class="row">
-					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 left">
+					<div class="col-lg-8 col-md-8 col-sm-12 col-xs-12 left">
 						<h4>What's Included</h4>
 						<ul>
 							<li>Two days filled with networking and sessions</li>
 							<li>Mobile app for planning your schedule, meeting exhibitors, sponsors, and attendees!</li>
-							<li>Video recordings of all sessions!</li>
-							<li>Cocktail Reception with 1 free drink, and appetizers!</li>
+							<li>Free access to video recordings of all sessions!</li>
+							<li>Cocktail Reception with a free drink and appetizers!</li>
 							<li>Lunch on both days!</li>
 							<li>Lots of coffee, tea and water!</li>
 							<li>Access to the Exhibit hall with lots of swag!</li>
+							<li>Discounted hotels, air fares, and more</li>
+							<li>Quiet area to decompress or nurse, babies welcome!</li>
+							<li>All gendered washroom</li>
+							<li>Fully accessible venue</li>
 						</ul>
 					</div>
-					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 right">
+					<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 right">
 						<a class="btn btn-success btn-lg" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket"></i>
 							<span>Register Today!</span></a>
 						<p class="greytext small">Pricing includes all taxes and services fees. Tickets do not need to be assigned to an attendee right away. You may assign your tickets to your company name to create a flex pass.</p>
