--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -25,7 +25,7 @@
 							<li>Discounted hotels, air fares, and more</li>
 							<li>Quiet area to decompress or nurse, babies welcome!</li>
 							<li>All gendered washroom</li>
-							<li>Fully accessible venue</li>
+							<li>Wheelchair accessible venue</li>
 						</ul>
 					</div>
 					<div class="col-lg-3 col-md-3 col-sm-12 col-xs-12 right">
