--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="https://www.sponseasy.com/p/full-stack-toronto-conference">sponsorship deck</a></p>
-			</div> 
+			</div>
 		</div>
 		<div>
 			<div class="sponsor">
@@ -101,7 +101,7 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 						<a href="#"><img src="/static/images/sponsors/paciello.png" class="img-responsive" alt="Paciello"></a>
 					</div>
 				</div>
-			<div> 
+			<div>
 		</div>
 	</div>
 	<div class="clearfix"></div>
@@ -136,7 +136,13 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 						<a href="http://www.pridetoronto.com/" target="_Blank" ><img src="/static/images/sponsors/pride-toronto.png" class="img-responsive" alt="Pride Toronto"></a>
 					</div>
 				</div>
-			<div> 
+				<div class="sponsor">
+					<p class="rank">Community Partner</p>
+					<div class="sponsor-img">
+						<a href="http://www.meetup.com/Music-Technology-Meetup/" target="_Blank" ><img src="/static/images/sponsors/mtmu.jpg" class="img-responsive" alt="Music Technology Meetup"></a>
+					</div>
+				</div>
+			<div>
 		</div>
 	</div>
 </section>
