--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -139,7 +139,7 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				<div class="sponsor">
 					<p class="rank">Community Partner</p>
 					<div class="sponsor-img">
-						<a href="http://www.meetup.com/Music-Technology-Meetup/" target="_Blank" ><img src="/static/images/sponsors/mtmu.jpg" class="img-responsive" alt="Music Technology Meetup"></a>
+						<a href="http://www.meetup.com/Music-Technology-Meetup/" target="_Blank" ><img src="/static/images/sponsors/mtmu.jpeg" class="img-responsive" alt="Music Technology Meetup"></a>
 					</div>
 				</div>
 			<div>
