--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12">
-				<p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="https://www.sponseasy.com/p/full-stack-toronto-conference">sponsorship deck</a></p>
+				<p>If your company is interested in helping by sponsoring the event please contact us at sponsorship@fsto.co. Sponsor contribution options can be found in the <a href="https://www.sponseasy.com/p/full-stack-toronto-conference">sponsorship site</a></p>
 			</div>
 		</div>
 		<div>
@@ -15,19 +15,19 @@
 				<p class="rank">Gold Sponsor - Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="
-https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=fullstackto2016" target="_blank"><img src="/static/images/sponsors/bugsnag.png" class="img-responsive" alt="BugSnag" /></a>
+https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=fullstackto2016" target="_blank"><img src="/static/images/sponsors/bugsnag.jpg" class="img-responsive" alt="BugSnag" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
 				<p class="rank">Silver Sponsor- Exhibitor</p>
 				<div class="sponsor-img">
-					<a href="https://www.twilio.com/" target="_blank"><img src="/static/images/sponsors/twilio.png" class="img-responsive" alt="Twilio" /></a>
+					<a href="https://www.twilio.com/" target="_blank"><img src="/static/images/sponsors/twilio.jpg" class="img-responsive" alt="Twilio" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
 				<p class="rank">Silver Sponsor- Exhibitor</p>
 				<div class="sponsor-img">
-					<a href="https://pusher.com/" target="_blank"><img src="/static/images/sponsors/pusher.png" class="img-responsive" alt="Pusher" /></a>
+					<a href="https://pusher.com/" target="_blank"><img src="/static/images/sponsors/pusher.jpg" class="img-responsive" alt="Pusher" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
@@ -45,7 +45,7 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 			<div class="sponsor">
 				<p class="rank">Travel Partner</p>
 				<div class="sponsor-img">
-					<a href="https://www.united.com/" target="_blank"><img src="/static/images/sponsors/united.png" class="img-responsive" alt="United Airlines" /></a>
+					<a href="https://www.united.com/" target="_blank"><img src="/static/images/sponsors/united.jpg" class="img-responsive" alt="United Airlines" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
@@ -57,13 +57,13 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 			<div class="sponsor">
 				<p class="rank">Registration Partner</p>
 				<div class="sponsor-img">
-					<a href="https://ti.to" target="_blank"><img src="/static/images/sponsors/tito-machine.png" class="img-responsive"alt="Tito"></a>
+					<a href="https://ti.to" target="_blank"><img src="/static/images/sponsors/tito-machine.jpg" class="img-responsive"alt="Tito"></a>
 				</div>
 			</div>
 			<div class="sponsor">
 				<p class="rank">Mobile App Partner</p>
 				<div class="sponsor-img">
-					<a href="https://eventmobi.com" target="_blank"><img src="/static/images/sponsors/eventmobi.png" class="img-responsive" alt="EventMobi"></a>
+					<a href="https://eventmobi.com" target="_blank"><img src="/static/images/sponsors/eventmobi.jpg" class="img-responsive" alt="EventMobi"></a>
 				</div>
 			</div>
 		</div>
@@ -80,25 +80,25 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				<div class="sponsor">
 					<p class="rank">Speaker Sponsor</p>
 					<div class="sponsor-img">
-						<a href="#"><img src="/static/images/sponsors/twitter.png" class="img-responsive" alt="Twitter"></a>
+						<a href="#"><img src="/static/images/sponsors/twitter.jpg" class="img-responsive" alt="Twitter"></a>
 					</div>
 				</div>
 				<div class="sponsor">
 					<p class="rank">Speaker Sponsor</p>
 					<div class="sponsor-img">
-						<a href="#"><img src="/static/images/sponsors/thoughtbot.png" class="img-responsive" alt="Thought Bot"></a>
+						<a href="#"><img src="/static/images/sponsors/thoughtbot.jpg" class="img-responsive" alt="Thought Bot"></a>
 					</div>
 				</div>
 				<div class="sponsor">
 					<p class="rank">Speaker Sponsor</p>
 					<div class="sponsor-img">
-						<a href="#"><img src="/static/images/sponsors/cedexis.png" class="img-responsive" alt="Cedexis"></a>
+						<a href="#"><img src="/static/images/sponsors/cedexis.jpg" class="img-responsive" alt="Cedexis"></a>
 					</div>
 				</div>
 				<div class="sponsor">
 					<p class="rank">Speaker Sponsor</p>
 					<div class="sponsor-img">
-						<a href="#"><img src="/static/images/sponsors/paciello.png" class="img-responsive" alt="Paciello"></a>
+						<a href="#"><img src="/static/images/sponsors/paciello.jpg" class="img-responsive" alt="Paciello"></a>
 					</div>
 				</div>
 			<div>
@@ -115,31 +115,31 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				<div class="sponsor">
 					<p class="rank">Community Partner</p>
 					<div class="sponsor-img">
-						<a href="http://www.meetup.com/DevTOEvents/" target="_Blank"><img src="/static/images/sponsors/devto.png" class="img-responsive" alt="DevTo"></a>
+						<a href="http://www.meetup.com/DevTOEvents/" target="_Blank"><img src="/static/images/sponsors/devto.jpg" class="img-responsive" alt="DevTo"></a>
 					</div>
 				</div>
 				<div class="sponsor">
 					<p class="rank">Community Partner</p>
 					<div class="sponsor-img">
-						<a href="http://www.meetup.com/ruby-lightning-to/" target="_Blank"><img src="/static/images/sponsors/rubylightning.png" class="img-responsive" alt="Ruby Lightning Talks"></a>
+						<a href="http://www.meetup.com/ruby-lightning-to/" target="_Blank"><img src="/static/images/sponsors/rubylightning.jpg" class="img-responsive" alt="Ruby Lightning Talks"></a>
 					</div>
 				</div>
 				<div class="sponsor">
 					<p class="rank">Community Partner</p>
 					<div class="sponsor-img">
-						<a href="http://www.meetup.com/Women-Who-Code-Toronto/" target="_Blank" ><img src="/static/images/sponsors/wwc.png" class="img-responsive" alt="Women Who Code"></a>
+						<a href="http://www.meetup.com/Women-Who-Code-Toronto/" target="_Blank" ><img src="/static/images/sponsors/wwc.jpg" class="img-responsive" alt="Women Who Code"></a>
 					</div>
 				</div>
 				<div class="sponsor">
 					<p class="rank">Meetup Partner</p>
 					<div class="sponsor-img">
-						<a href="http://www.pridetoronto.com/" target="_Blank" ><img src="/static/images/sponsors/pride-toronto.png" class="img-responsive" alt="Pride Toronto"></a>
+						<a href="http://www.pridetoronto.com/" target="_Blank" ><img src="/static/images/sponsors/pride-toronto.jpg" class="img-responsive" alt="Pride Toronto"></a>
 					</div>
 				</div>
 				<div class="sponsor">
 					<p class="rank">Community Partner</p>
 					<div class="sponsor-img">
-						<a href="http://www.meetup.com/Music-Technology-Meetup/" target="_Blank" ><img src="/static/images/sponsors/mtmu.jpeg" class="img-responsive" alt="Music Technology Meetup"></a>
+						<a href="http://www.meetup.com/Music-Technology-Meetup/" target="_Blank" ><img src="/static/images/sponsors/mtmu.jpg" class="img-responsive" alt="Music Technology Meetup"></a>
 					</div>
 				</div>
 			<div>
@@ -149,7 +149,7 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 <footer>
 <div class="container">
     <div class="row col-md-12">
-      &copy; 2015 Full Stack Toronto - Canadian Federal Non-Profit #8992240 | <a href="/code-of-conduct">Code of Conduct</a> <a href="//www.iubenda.com/privacy-policy/759651" class="iubenda-nostyle no-brand iub-legal-only iubenda-embed" title="Privacy Policy">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "//cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
+      &copy; 2016 Full Stack Toronto - Canadian Federal Non-Profit #8992240 | <a href="/code-of-conduct">Code of Conduct</a> <a href="//www.iubenda.com/privacy-policy/759651" title="Privacy Policy">Privacy Policy</a>
     </div>
   </div>
 </footer>
