--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/"><img src="/static/images/fsto-logo.png" alt="Full Stack Toronto" /></a>
+            <a class="navbar-brand page-scroll" href="/"><img src="/static/images/fsto-logo.jpg" alt="Full Stack Toronto" /></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
