--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,25 @@
 <!DOCTYPE html>
 <html itemscope itemtype="http://schema.org/Article">
   {% include head.html %}
-  {% include scripts.html %}
   <body>
   	{% include nav.html %}
   	{% include header.html %}
     {{ content }}
     {% include footer.html %}
+    {% if page.js %}
+      {% for js_file in page.js %}
+      <script src='/js/{{ js_file }}.js' type="text/javascript"></script>
+      {% endfor %}
+    {% endif %}
+    <!-- Google Analytics -->
+    <script async>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-48190009-2', 'auto');
+        ga('send', 'pageview');
+    </script>
   </body>
 </html>
