--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
       <script src='/js/{{ js_file }}.js' type="text/javascript"></script>
       {% endfor %}
     {% endif %}
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     <!-- Google Analytics -->
     <script async>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
