--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -24,10 +24,10 @@
                     <a href="/speakers">Speakers</a>
                 </li>
                 <li>
-                    <a href="http://eventmobi.com/fstoco2016" target="_blank">App</a>
+                    <a href="/info">Venue &amp; Travel</a>
                 </li>
                 <li>
-                    <a href="http://www.meetup.com/full-stack-to/" target="_blank">Meetups</a>
+                    <a href="http://eventmobi.com/fstoco2016" target="_blank">App</a>
                 </li>
             </ul>
         </div>
