--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,12 +7,14 @@
   	{% include header.html %}
     {{ content }}
     {% include footer.html %}
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     {% if page.js %}
       {% for js_file in page.js %}
       <script src='/js/{{ js_file }}.js' type="text/javascript"></script>
       {% endfor %}
     {% endif %}
-    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
+
     <!-- Google Analytics -->
     <script async>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
