--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -7,6 +7,8 @@
   	{% include big_header.html %}
     {{ content }}
     {% include footer.html %}
+    <script type="text/javascript" src="/js/jquery.min.js"></script>
+    <script type="text/javascript" src="/js/bootstrap.min.js"></script>
     {% if page.js %}
       {% for js_file in page.js %}
       <script src='/js/{{ js_file }}.js' type="text/javascript"></script>
