--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,6 +31,12 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				</div>
 			</div>
 			<div class="sponsor">
+				<p class="rank">Silver Sponsor- Exhibitor</p>
+				<div class="sponsor-img">
+					<a href="https://rollbar.com/" target="_blank"><img src="/static/images/sponsors/rollbar.jpg" class="img-responsive" alt="Rollbar" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
 				<p class="rank">Bronze Sponsor- Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="http://www.ca.com/us.html" target="_blank"><img src="/static/images/sponsors/ca-tech.jpg" class="img-responsive" alt="CA Technologies" /></a>
