--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -43,6 +43,12 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				</div>
 			</div>
 			<div class="sponsor">
+				<p class="rank">Bronze Sponsor- Swag</p>
+				<div class="sponsor-img">
+					<a href="https://www.heroku.com/" target="_blank"><img src="/static/images/sponsors/heroku.jpg" class="img-responsive" alt="Heroku" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
 				<p class="rank">Partner - Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="https://www.ziversity.com/" target="_blank"><img src="/static/images/sponsors/ziversity.jpg" class="img-responsive" alt="Ziversity" /></a>
