--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,5 +25,16 @@
         ga('create', 'UA-48190009-2', 'auto');
         ga('send', 'pageview');
     </script>
+    <!-- Twitter universal website tag code -->
+<script>
+!function(e,n,u,a){e.twq||(a=e.twq=function(){a.exe?a.exe.apply(a,arguments):
+a.queue.push(arguments);},a.version='1',a.queue=[],t=n.createElement(u),
+t.async=!0,t.src='//static.ads-twitter.com/uwt.js',s=n.getElementsByTagName(u)[0],
+s.parentNode.insertBefore(t,s))}(window,document,'script');
+// Insert Twitter Pixel ID and Standard Event data below
+twq('init','nv9ky');
+twq('track','PageView');
+</script>
+<!-- End Twitter universal website tag code -->
   </body>
 </html>
