--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,12 +17,17 @@
 
     <!-- Google Analytics -->
     <script async>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        var googleDomainList = ['fsto.co', 'ti.to'];
 
-        ga('create', 'UA-48190009-2', 'auto');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+
+        ga('create', 'UA-48190009-2', 'auto', {'allowLinker': true});
+        ga('require', 'linker');
+        ga('linker:autoLink', googleDomainList);
         ga('send', 'pageview');
     </script>
     <!-- Twitter universal website tag code -->
