--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="google-site-verification" content="2dVIu83aF5CgxgbO2Oj8UDYVxOcp3T9UK5kLDqX_63s" />
     <title>{{ page.title }} | Full Stack Toronto</title>
     <link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css" type="text/css">
     <!-- Bootstrap Core CSS -->
