Spelling error, hover logo

--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -16,10 +16,9 @@
 						<ul>
 							<li>Two days filled with sessions and assisted networking</li>
 							<li>Mobile app for planning your schedule, meeting: exhibitors, sponsors, and attendees!</li>
-							<li>Free access to video recordings of all sessions!</li>
 							<li>Cocktail Reception with a free drink and appetizers!</li>
 							<li>Lunch on both days with lots of coffee, tea and water!</li>
-							<li>Preffered rate at host hotel, travel discounts</li>
+							<li>Preferred rate at host hotel, travel discounts</li>
 							<li>Dedicated zone for nursing, wellness and spiritual activities</li>
 							<li>Non-binary washrooms and wheelchair accessible</li>
 						</ul>
