--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -49,9 +49,15 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				</div>
 			</div>
 			<div class="sponsor">
+				<p class="rank">Bronze Sponsor- Exhibitor</p>
+				<div class="sponsor-img">
+					<a href="https://www.hover.com/" target="_blank"><img src="/static/images/sponsors/hover.jpg" class="img-responsive" alt="Hover" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
 				<p class="rank">Bronze Sponsor- Swag</p>
 				<div class="sponsor-img">
-					<a href="https://www.heroku.com/" target="_blank"><img src="/static/images/sponsors/heroku.jpg" class="img-responsive" alt="Heroku" /></a>
+					<a href="https://dev.modern.ie/" target="_blank"><img src="/static/images/sponsors/microsoft.jpg" class="img-responsive" alt="Microsoft" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
