--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,56 +12,62 @@
 		</div>
 		<div>
 			<div class="sponsor">
-				<p class="rank">Gold Sponsor - Exhibitor</p>
+				<p class="rank">Platinum Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="
 https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=fullstackto2016" target="_blank"><img src="/static/images/sponsors/bugsnag.jpg" class="img-responsive" alt="BugSnag" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Silver Sponsor- Exhibitor</p>
+				<p class="rank">Gold Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="https://www.twilio.com/" target="_blank"><img src="/static/images/sponsors/twilio.jpg" class="img-responsive" alt="Twilio" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Silver Sponsor- Exhibitor</p>
+				<p class="rank">Gold Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="https://pusher.com/" target="_blank"><img src="/static/images/sponsors/pusher.jpg" class="img-responsive" alt="Pusher" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Silver Sponsor- Exhibitor</p>
+				<p class="rank">Gold Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="https://rollbar.com/" target="_blank"><img src="/static/images/sponsors/rollbar.jpg" class="img-responsive" alt="Rollbar" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Bronze Sponsor- Exhibitor</p>
+				<p class="rank">Silver Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="http://www.ca.com/us.html" target="_blank"><img src="/static/images/sponsors/ca-tech.jpg" class="img-responsive" alt="CA Technologies" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Bronze Sponsor- Exhibitor</p>
+				<p class="rank">Silver Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="https://www.hover.com/" target="_blank"><img src="/static/images/sponsors/hover.jpg" class="img-responsive" alt="Hover" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Bronze Sponsor- Exhibitor</p>
+				<p class="rank">Silver Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="https://developer.microsoft.com/en-us/microsoft-edge/" target="_blank"><img src="/static/images/sponsors/microsoft.jpg" class="img-responsive" alt="Microsoft" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Bronze Sponsor- Swag</p>
+				<p class="rank">Silver Exhibitor</p>
+				<div class="sponsor-img">
+					<a href="https://www.globalpaymentsinc.com/canada/" target="_blank"><img src="/static/images/sponsors/globalpayments.jpg" class="img-responsive" alt="Global Payments" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
+				<p class="rank">Bronze Sponsor</p>
 				<div class="sponsor-img">
 					<a href="https://www.heroku.com/" target="_blank"><img src="/static/images/sponsors/heroku.jpg" class="img-responsive" alt="Heroku" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Partner - Exhibitor</p>
+				<p class="rank">Partner Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="https://www.ziversity.com/" target="_blank"><img src="/static/images/sponsors/ziversity.jpg" class="img-responsive" alt="Ziversity" /></a>
 				</div>
