--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				</div>
 			</div>
 			<div class="sponsor">
-				<p class="rank">Gold Exhibitor</p>
+				<p class="rank">Gold Sponsor</p>
 				<div class="sponsor-img">
 					<a href="https://www.twilio.com/" target="_blank"><img src="/static/images/sponsors/twilio.jpg" class="img-responsive" alt="Twilio" /></a>
 				</div>
@@ -70,6 +70,12 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				<p class="rank">Partner Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="https://www.ziversity.com/" target="_blank"><img src="/static/images/sponsors/ziversity.jpg" class="img-responsive" alt="Ziversity" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
+				<p class="rank">Partner Exhibitor</p>
+				<div class="sponsor-img">
+					<a href="http://toronto.coderdojo.ca/" target="_blank"><img src="/static/images/sponsors/coder-dojo.jpg" class="img-responsive" alt="Coder Dojo" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
