--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -99,7 +99,7 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 			<div class="sponsor">
 				<p class="rank">Travel Partner</p>
 				<div class="sponsor-img">
-					<a href="http://www.viarail.ca/en" target="_blank"><img src="/static/images/sponsors/viarail.svg" class="img-responsive" alt="ViaRail" /></a>
+					<a href="http://www.viarail.ca/en" target="_blank"><img src="/static/images/sponsors/viarail.jpg" class="img-responsive" alt="ViaRail" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
