--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -61,6 +61,12 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				</div>
 			</div>
 			<div class="sponsor">
+				<p class="rank">Silver Exhibitor</p>
+				<div class="sponsor-img">
+					<a href="https://hired.ca/" target="_blank"><img src="/static/images/sponsors/hired.png" class="img-responsive" alt="Hired" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
 				<p class="rank">Bronze Sponsor</p>
 				<div class="sponsor-img">
 					<a href="https://www.heroku.com/" target="_blank"><img src="/static/images/sponsors/heroku.jpg" class="img-responsive" alt="Heroku" /></a>
