--- a/_includes/big_header.html
+++ b/_includes/big_header.html
@@ -24,9 +24,8 @@
 						</ul>
 					</div>
 					<div class="col-lg-5 col-md-5 col-sm-12 col-xs-12 right">
-						<a class="btn btn-success btn-lg" href="https://ti.to/fullstackto/2016" target="_blank"><i class="fa fa-ticket"></i>
-							<span>Register Today!</span></a>
-						<p class="greytext small">Pricing includes all taxes and services fees. Tickets do not need to be assigned to an attendee right away. You may assign your tickets to your company name to create a flex pass.</p>
+						<a class="btn btn-success btn-lg" href="#" target="_blank"><i class="fa fa-ticket"></i>
+							<span>Sold Out!</span></a>
 					</div>
 				</div>
 			</div>
