--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -37,6 +37,12 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				</div>
 			</div>
 			<div class="sponsor">
+				<p class="rank">Gold Exhibitor</p>
+				<div class="sponsor-img">
+					<a href="http://www.scotiabank.com/ca/en/0,,178,00.html" target="_blank"><img src="/static/images/sponsors/scotiabank.jpg" class="img-responsive" alt="ScotiaBank" /></a>
+				</div>
+			</div>
+			<div class="sponsor">
 				<p class="rank">Silver Exhibitor</p>
 				<div class="sponsor-img">
 					<a href="http://www.ca.com/us.html" target="_blank"><img src="/static/images/sponsors/ca-tech.jpg" class="img-responsive" alt="CA Technologies" /></a>
@@ -146,19 +152,7 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 				<div class="sponsor">
 					<p class="rank">Speaker Sponsor</p>
 					<div class="sponsor-img">
-						<a href="#"><img src="/static/images/sponsors/thoughtbot.jpg" class="img-responsive" alt="Thought Bot"></a>
-					</div>
-				</div>
-				<div class="sponsor">
-					<p class="rank">Speaker Sponsor</p>
-					<div class="sponsor-img">
 						<a href="#"><img src="/static/images/sponsors/cedexis.jpg" class="img-responsive" alt="Cedexis"></a>
-					</div>
-				</div>
-				<div class="sponsor">
-					<p class="rank">Speaker Sponsor</p>
-					<div class="sponsor-img">
-						<a href="#"><img src="/static/images/sponsors/paciello.jpg" class="img-responsive" alt="Paciello"></a>
 					</div>
 				</div>
 			<div>
