--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -39,7 +39,7 @@ https://bugsnag.com/?utm_source=conference_website&utm_medium=logo&utm_campaign=
 			<div class="sponsor">
 				<p class="rank">Gold Exhibitor</p>
 				<div class="sponsor-img">
-					<a href="http://www.scotiabank.com/ca/en/0,,178,00.html" target="_blank"><img src="/static/images/sponsors/scotiabank.jpg" class="img-responsive" alt="ScotiaBank" /></a>
+					<a href="http://jobs.scotiabank.com/careers/it-jobs" target="_blank"><img src="/static/images/sponsors/scotiabank.jpg" class="img-responsive" alt="ScotiaBank" /></a>
 				</div>
 			</div>
 			<div class="sponsor">
