--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,8 +4,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <title>{% if page.title %}{{ page.title | escape }}{% endif %} | {{ site.title | escape }}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+
+  <meta name="description" content="Full Stack Toronto is a non-profit with programs for developers to advance their careers and give back to the community!" />
+  <meta name="keywords" content="Front-End Design Conference, Full Stack, Full Stack Toronto, FSTO, Web Conference, Design, Development, Business, Marketing, Toronto, Ontario, Canada, Front-End, Front End, Back-end, back end, devops, dev ops, product development, project management, web development conference, web design conference, ux conference, devops conference, product conference, exhibit hall">
+  <meta name="Category" content="Conferences" />
+
+  <!-- Schema.org markup for Google+ -->
+  <meta itemprop="name" content="Full Stack Toronto">
+  <meta itemprop="description" content="Full Stack Toronto is a non-profit with programs for developers to advance their careers and give back to the community!">
+  <meta itemprop="image" content="https://fsto.co/static/card.jpg?v=3">
+
+  <!-- Twitter Card data -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@fullstackto">
+  <meta name="twitter:title" content="{{ page.title }} | Full Stack Toronto">
+  <meta name="twitter:description" content="Full Stack Toronto is a non-profit with programs for developers to advance their careers and give back to the community!">
+  <meta name="twitter:creator" content="@fullstackto">
+  <!-- Twitter summary card with large image must be at least 280x150px -->
+  <meta name="twitter:image:src" content="https://fsto.co/static/images/card.jpg?v=3">
+
+  <!-- Open Graph data -->
+  <meta property="og:title" content="{{ page.title }} | Full Stack Toronto" />
+  <meta property="og:type" content="article" />
+  <meta property="og:url" content="https://fsto.co" />
+  <meta property="og:image" content="https://fsto.co/static/images/card.jpg?v=3" />
+  <meta property="og:description" content="Full Stack Toronto is a non-profit with programs for developers to advance their careers and give back to the community!" />
+  <meta property="og:site_name" content="Full Stack Toronto" />
 </head>
