hashbrown so meta

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,7 +15,7 @@
   <!-- Schema.org markup for Google+ -->
   <meta itemprop="name" content="Full Stack Toronto">
   <meta itemprop="description" content="Full Stack Toronto is a non-profit with programs for developers to advance their careers and give back to the community!">
-  <meta itemprop="image" content="https://fsto.co/static/card.jpg?v=3">
+  <meta itemprop="image" content="https://fsto.co/card.jpg?v=3">
 
   <!-- Twitter Card data -->
   <meta name="twitter:card" content="summary_large_image">
@@ -24,13 +24,13 @@
   <meta name="twitter:description" content="Full Stack Toronto is a non-profit with programs for developers to advance their careers and give back to the community!">
   <meta name="twitter:creator" content="@fullstackto">
   <!-- Twitter summary card with large image must be at least 280x150px -->
-  <meta name="twitter:image:src" content="https://fsto.co/static/images/card.jpg?v=3">
+  <meta name="twitter:image:src" content="https://fsto.co/card.jpg?v=3">
 
   <!-- Open Graph data -->
   <meta property="og:title" content="{{ page.title }} | Full Stack Toronto" />
   <meta property="og:type" content="article" />
   <meta property="og:url" content="https://fsto.co" />
-  <meta property="og:image" content="https://fsto.co/static/images/card.jpg?v=3" />
+  <meta property="og:image" content="https://fsto.co/card.jpg?v=3" />
   <meta property="og:description" content="Full Stack Toronto is a non-profit with programs for developers to advance their careers and give back to the community!" />
   <meta property="og:site_name" content="Full Stack Toronto" />
 </head>
