--- a/_includes/big-header.html
+++ b/_includes/big-header.html
@@ -5,7 +5,7 @@
           <li class="logo"><a class="navbar-brand" href="/"><img src="/images/logo.png" alt="Full Stack Toronto" /></a></li>
           <li><a href="/">Welcome</a></li>
           <li><a href="#programs">Our Programs</a></li>
-          <li><a href="#donate">Sponsor Us</a></li>
+          <li><a href="#sponsor">Sponsor Us</a></li>
         </ul>
     </nav>
     <div class="title">
